--- a/style.css
+++ b/style.css
@@ -27,8 +27,7 @@ button:hover{
     background-color: #354fe3;
 }
 .row0{
-    padding: 20px;
-}
+    padding: 20px; /* I know row0-row6 can be put together under one identifier. 
 .row1{
     padding: 20px; 
 }
