--- a/style.css
+++ b/style.css
@@ -3,46 +3,65 @@ body{
     margin: 0;
     padding: 0;
     background-image: url('windows11.jpg');
+    font-family: 'Segoe UI';
 }
 #output{
     padding: 20px;
-    height: 10px;
-    width: 155px;
-    font-size: 20px;
-    border-color: black; 
+    width: 266px;
+    height: 40px;
+    font-size: 40px;
     color: white;
-    background-color: rgb(78, 77, 77);  
+    background-color: #1B2128;  
+    text-align: right;
+    border: 0px solid;
+}
+.row1 button, .row2 button{
+    background-color: #2D333C;
 }
 button{
-    background-color: rgb(78, 77, 77);
+    background-color: #363C44;
     font-size: 20px;
-    height: 35px;
-    width: 50px;
+    height: 48px;
+    width: 75px;
     float: left;
     color: white;
     transition-duration: 0.4s;
     cursor: pointer;
+    border-radius: 10%;
+    border: 0px solid;
+    margin: 1px;
 }
 button:hover{
     background-color: #354fe3;
 }
-.row0{
-    padding: 20px; /* I know row0-row6 can be put together under one identifier. I will do it later.*/
-.row1{
-    padding: 20px; 
+.back{
+    background-color: #1B2128;
+    width: 320px;
+    margin-left: 43%;
+    margin-top: 15%;
+    height: 500px;
+    border-radius: 2%;
 }
-.row2{
-    padding: 20px;
+.title{
+    height: 30px;
+    margin-bottom: 5px;
 }
-.row3{
-    padding: 20px;
+.title p{
+    font-size: 15px;
+    padding: 5px;
 }
-.row4{
-    padding: 20px;
+.standard{
+    height: 30px;
+    font-size: 23px;
+    margin-top: -15px;
 }
-.row5{
-    padding: 20px;
-}
-.row6{
-    padding: 20px;
+.row0,
+.row1,
+.row2,
+.row3,
+.row4,
+.row5,
+.row6 {
+    padding: 5px;
+    padding-top: 20px;
 }
